# FATEC-API-5-SEMESTRE

./: .env.example  .gitignore  .gitlint  .mutmut-cache  .mutmut_config  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.apimock.yml  docker-compose.prod.yml  docker-compose.yml  locustfile.py  manage.py  package-lock.json  pyproject.toml  pytest.ini  python-app-ci.yml  requirements-dev.txt  requirements.txt  setup_precommit.sh  sonar-project.properties
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: auto-traceability.yml  build.yml  ci-migrate.yml  collect-pr-stats.yml  deploy.yml  generate-pr-chats-main.yml  pr-stats.yml  push-traceability.yml  python-app-ci.yml
apimock/: Dockerfile  package-lock.json
apimock/server/: index.js
docker/fixtures/: cards_fixture.json  issues_fixture.json
documentacao/produto/: manual_do_usuario.md  product_backlog.md  requisitos.md
documentacao/tecnica/: cron_jobs.md  database.md  descricao_dados.md  dimensional_db_doc.md  documentacao_modelo_estrela.md  documentação_técnica_backend.md  estrutura_de_branchs.md  integracao_com_sonarqube.md  manual_de_instalacao.md  metricas_entrega_sonnarqube.md  padrao_de_commits.md  padrao_test_backend.md  relatorio_plano_de_deploy.md  relatorio_plano_de_rastreabilidade.md  snowflake_doc.md  star_doc.md
flyway/sql/: V1__initial_schema.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue
html/: index.html
jiboia/accounts/: admin.py  apps.py  models.py  services.py  urls.py  views.py
liquibase/: liquibase.properties
(+158 files in other folders)
