[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jiboia"
version = "0.1.0"
requires-python = "~=3.11"
dependencies = [
    "asgiref==3.8.1",
    "dj-database-url==2.2.0",
    "django==4.2.16",
    "django-extensions==3.2.3",
    "psycopg2==2.9.9",
    "pytest-cov==5.0.0",
    "python-decouple==3.8",
    "sqlparse==0.5.1",
    "tzdata==2024.2",
]

[dependency-groups]
dev = [
    "asgiref==3.8.1",
    "black==24.10.0",
    "dj-database-url==2.2.0",
    "django==4.2.16",
    "django-extensions==3.2.3",
    "ipython==8.28.0",
    "mock==5.1.0",
    "psycopg2==2.9.9",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-django==4.9.0",
    "python-decouple==3.8",
    "ruff>=0.13.0",
    "sqlparse==0.5.1",
    "tzdata==2024.2",
]

[tool.setuptools.packages.find]
where = ["jiboia"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "jiboia.jiboia.settings"
python_files = "test_*.py"
addopts = "-x -vv"
filterwarnings = [
    "ignore::pytest.PytestCacheWarning",
    "ignore::UserWarning",
    "ignore:No directory at",
]

[tool.ruff]
line-length = 120

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
]
[tool.ruff.lint]
select = ["E", "F", "I", "C90"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"